--- a/Cafeine/Views/LocalDirectorySetup.xaml
+++ b/Cafeine/Views/LocalDirectorySetup.xaml
@@ -18,7 +18,7 @@
                 <SymbolIcon Symbol="Folder" Width="36" Height="36" Margin="0,0,12,0"/>
                 <TextBlock x:Name="DefaultDirectory" TextWrapping="Wrap" Text="None" VerticalAlignment="Center" Width="246"/>
             </StackPanel>
-            <Button x:Name="BrowseDefaultFolder" Click="BrowseDefaultFolder_Click" Content="Add default directory" HorizontalAlignment="Left" Height="36" VerticalAlignment="Top" Width="300"/>
+            <Button x:Name="BrowseDefaultFolder" Click="BrowseDefaultFolder_Click" Content="Add default directory" HorizontalAlignment="Center" Height="36" VerticalAlignment="Top" Width="300"/>
 
             <TextBlock Text="Bridge" FontSize="20" FontWeight="SemiBold" Margin="0,12,0,0"/>
             <TextBlock Text="Link your folders with your collection" Margin="0,0,0,8"/>
@@ -29,7 +29,7 @@
                     </DataTemplate>
                 </AutoSuggestBox.ItemTemplate>
             </AutoSuggestBox>
-            <ListView x:Name="LinkedFolder" Visibility="Collapsed" IsItemClickEnabled="True" ItemClick="LinkedFolder_ItemClick">
+            <ListView x:Name="LinkedFolder" Visibility="Collapsed" IsItemClickEnabled="True" ItemClick="LinkedFolder_ItemClick" MaxHeight="300">
                 <ListView.ItemTemplate>
                     <DataTemplate x:DataType="vm:LocalDirectorySetupViewModel">
                         <Grid>
@@ -43,7 +43,6 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-
         </StackPanel>
     </Grid>
 </ContentDialog>
