--- a/Cafeine/Views/View_Resouces/ExpandItemDetailsTemplate.xaml
+++ b/Cafeine/Views/View_Resouces/ExpandItemDetailsTemplate.xaml
@@ -2,5 +2,5 @@
     x:Class="Cafeine.ExpandItemDetailsTemplate"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Cafeine.Models">
+    xmlns:local="using:Cafeine.Model">
 </ResourceDictionary>
