--- a/Cafeine/Views/View_Resouces/HomePageTemplate.xaml
+++ b/Cafeine/Views/View_Resouces/HomePageTemplate.xaml
@@ -2,7 +2,7 @@
     x:Class="Cafeine.HomePageTemplate"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Cafeine.Models"
+    xmlns:local="using:Cafeine.Model"
     xmlns:xaml="using:Windows.UI.Xaml">
     <ControlTemplate x:Name="RadioButtonTemplate" TargetType="RadioButton">
         <Grid x:Name="RootGrid"  BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}">
