--- a/Cafeine/Cafeine/View/HomePage.xaml
+++ b/Cafeine/Cafeine/View/HomePage.xaml
@@ -56,18 +56,22 @@
                                  Content="Library"
                                  GroupName="Tab"
                                  IsChecked="{x:Bind Vm.LibraryTabChecked,Mode=TwoWay}"
-                                 FontSize="24"
+                                 FontSize="22"
                                  MinWidth="100"
                                  FontWeight="Light"
-                                 Template="{StaticResource RadioButtonTemplate}" />
+                                 Template="{StaticResource RadioButtonTemplate}"
+                                 FontFamily="ms-appx:/Assets/Fonts/Montserrat/Montserrat-Reguler.ttf#Montserrat"
+                                 CharacterSpacing="16"/>
                     <RadioButton x:Name="Schedule"
                                  Content="Schedule"
                                  GroupName="Tab"
                                  IsChecked="{x:Bind Vm.ScheduleTabEnabled,Mode=TwoWay}"
                                  FontSize="24"
-                                 MinWidth="100"
+                                 MinWidth="120"
                                  FontWeight="Light"
-                                 Template="{StaticResource RadioButtonTemplate}" />
+                                 Template="{StaticResource RadioButtonTemplate}"
+                                 FontFamily="ms-appx:/Assets/Fonts/Montserrat/Montserrat-Reguler.ttf#Montserrat"
+                                 Visibility="Collapsed"/>
                     <RadioButton x:Name="SettingsTab"
                                  Content="Settings"
                                  IsChecked="True"
